<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="146dp"
        android:text="@string/login_sign_up"
        android:textSize="32sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/loginTextColor"/>

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:theme="@style/EditTheme"
        android:hint="@string/email_hint"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="24dp"
        android:theme="@style/EditTheme"
        android:hint="@string/password_hint"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_none"
        android:background="@color/loginBackground"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/find_email_password"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:background="@color/loginBackground"
        android:text="@string/find_email_password"
        android:textColor="@color/loginTextColor"
        android:textSize="12sp"
        android:lineSpacingExtra="6sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <TextView
        android:id="@+id/login_question"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/login_question"
        android:textColor="@color/loginTextColor"
        android:textSize="12sp"
        android:lineSpacingExtra="6sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_email_password" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:gravity="start"
        android:text="@string/sign_up"
        android:textColor="@color/loginTextColor"
        android:textSize="12sp"
        android:background="@color/loginBackground"
        android:lineSpacingExtra="6sp"
        app:layout_constraintStart_toEndOf="@id/login_question"
        app:layout_constraintTop_toBottomOf="@id/find_email_password"/>




</androidx.constraintlayout.widget.ConstraintLayout>