<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground">

    <ImageButton
        android:id="@+id/btn_sign_up_privacy_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_sign_up_back"
        android:background="@color/loginBackground"
        android:onClick="signUpPrivacyOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_sign_up_privacy_information_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/information_input"
        android:textColor="@color/loginTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_privacy_back"/>

    <TextView
        android:id="@+id/tv_sign_up_privacy_school_certification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/school_certification"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_privacy_information_input"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_privacy_back" />

    <TextView
        android:id="@+id/tv_sign_up_privacy_select_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_region"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="14sp"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_privacy_school_certification"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_privacy_back" />

    <TextView
        android:id="@+id/tv_sign_up_privacy_please_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/please_input_privacy"
        android:textColor="@color/loginTextColor"
        android:textSize="32sp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_privacy_information_input" />


    <EditText
        android:id="@+id/et_sign_up_privacy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:ems="15"
        android:textSize="14sp"
        android:theme="@style/EditTheme"
        android:hint="@string/name_input"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_privacy_please_input_email" />

    <EditText
        android:id="@+id/et_sign_up_privacy_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="15"
        android:textSize="14sp"
        android:theme="@style/EditTheme"
        android:hint="@string/birth_input"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_privacy_name" />
    <EditText
        android:id="@+id/et_sign_up_privacy_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="15"
        android:textSize="14sp"
        android:theme="@style/EditTheme"
        android:hint="@string/nick_input"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_privacy_birth" />

    <ImageButton
        android:id="@+id/btn_sign_up_privacy_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/loginBackground"
        android:src="@drawable/ic_sign_up_complete"
        android:onClick="signUpPrivacyOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_privacy_nick" />

    <TextView
        android:id="@+id/tv_sign_up_privacy_dot_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/dot"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="90sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_up_privacy_dot_second"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_sign_up_privacy_dot_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/dot"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="90sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_privacy_dot_first"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_up_privacy_dot_third"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_sign_up_privacy_dot_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/dot"
        android:textColor="@color/loginTextColor"
        android:textSize="90sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_privacy_dot_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>