<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground">

    <ImageButton
        android:id="@+id/btn_sign_up_school_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_sign_up_back"
        android:background="@color/loginBackground"
        android:onClick="signUpSchoolOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up_school_information_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/information_input"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="14sp"
        android:textStyle="bold"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_school_back"/>

    <TextView
        android:id="@+id/tv_sign_up_school_school_certification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/school_certification"
        android:textColor="@color/loginTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_school_information_input"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_school_back" />

    <TextView
        android:id="@+id/tv_sign_up_school_select_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_region"
        android:textColor="@color/loginTextColorNotFocus"
        android:textSize="14sp"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up_school_school_certification"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_school_back" />

    <TextView
        android:id="@+id/tv_sign_up_school_please_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/please_input_school"
        android:textColor="@color/loginTextColor"
        android:textSize="32sp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_school_information_input" />


    <EditText
        android:id="@+id/et_sign_up_school_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:ems="15"
        android:textSize="14sp"
        android:theme="@style/EditTheme"
        android:hint="@string/school_hint"
        android:textColorHint="@color/inputColor"
        android:textColor="@color/inputColor"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_school_please_input_email" />

    <ImageButton
        android:id="@+id/btn_sign_up_school_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@color/loginBackground"
        android:src="@drawable/ic_sign_up_complete"
        android:onClick="signUpSchoolOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_school_input" />



</androidx.constraintlayout.widget.ConstraintLayout>