<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingTop="28dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_write_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_write"
            android:onClick="MainWriteOnClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textColor="@color/hereThereText"
            android:lineSpacingExtra="8sp"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@id/btn_write_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <Button
            android:id="@+id/btn_main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="0dp"
            android:background="@color/white"
            android:text="@string/write_complete"
            android:textSize="16sp"
            android:textColor="@color/hereThereText"
            android:lineSpacingExtra="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_write"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:scrollbars="none">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DFDFDF" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_write_region"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:text="@string/write_retoin"
                android:textSize="12sp"
                android:textColor="@color/listTextColor"
                android:lineSpacingExtra="6sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_write_down_arrow"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_Sign_up_region"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignStart="@id/linear_write_region"
            android:layout_alignEnd="@id/linear_write_region"
            android:background="@color/white"
            android:layout_below="@+id/linear_write_region"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            android:scrollbars="vertical" >
        </ListView>

    </RelativeLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>




</LinearLayout>
